[build-system]
requires = ["setuptools>=45", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pyformat"
version = "1.0.0"
description = "Ultra-fast cross-language text formatting library"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Soumo", email = "telegram.me/maybesoumo"}]
keywords = ["formatting", "html", "telegram", "markdown", "text"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup"
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/Timeness/pyformat"
Repository = "https://github.com/Timeness/pyformat"
